create - show - like - delete post

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+
+@import "https://fonts.bunny.net/css?family=tahoma:400,500,600&display=swap";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
